# r-stocks-sentiment

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  models.py  pyproject.toml  ruff.toml  server.py
.github/workflows/: ci.yml
services/: __init__.py  reddit_service.py  visualization_service.py
tests/: conftest.py
tests/data/: sample_plot_data.json  sample_posts.json
tests/services/: test_reddit_service.py  test_visualization_service.py
