[project]
name = "r_stocks_sentiment"
version = "0.1.0"
description = "MCP for analyzing sentiment in r/Stocks posts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpraw>=7.8.1",
    "fastmcp>=2.11.1",
    "textblob>=0.17.1",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=9.5.0",
    "adjusttext>=1.3.0",
    "mpld3>=0.5.11",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.0.0",
    "ruff>=0.12.8",
    "pre-commit>=3.2.0",
]